--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ function createTTQdivide() {
 	var b = Math.floor(Math.random() * 9) + 1;
 	var r = a * b;
 	var ret = Object.assign({}, emptyQ);
-	ret.question = r + "/" + a;
+	ret.question = r + "÷" + a;
 	ret.modelAns = b;
 	return ret;
 }
